Yarn global upgrade. Remove vscode settings

--- a/home/.atom/styles.less
+++ b/home/.atom/styles.less
@@ -20,6 +20,6 @@ atom-text-editor {
 
 // To style other content in the text editor's shadow DOM, use the ::shadow
 // expression
-atom-text-editor::shadow .cursor {
+atom-text-editor.editor .cursor {
   transition: opacity 0.5s ease;
 }
